--- a/EduMan/Views/Shared/_NavbarPartial.cshtml
+++ b/EduMan/Views/Shared/_NavbarPartial.cshtml
@@ -15,6 +15,15 @@
                 <li><a asp-controller="Absence" asp-action="All">All Absences</a></li>
             </ul>
         </li>
+        <li class="nav-item dropdown" style="list-style:none">
+            <a class="dropdown-toggle font-weight-bold nav-link" data-toggle="dropdown" href="#">
+                Events
+            </a>
+            <ul class="dropdown-menu list-style:none">
+                <li><a asp-controller="Event" asp-action="Create">Create Event</a></li>
+                <li><a asp-controller="Event" asp-action="All">All Events</a></li>
+            </ul>
+        </li>
     }
     if (user.IsInRole("Principal"))
     {
@@ -26,6 +35,15 @@
                 <li><a asp-controller="Absence" asp-action="All">All Absences</a></li>
             </ul>
         </li>
+        <li class="nav-item dropdown" style="list-style:none">
+            <a class="dropdown-toggle font-weight-bold nav-link" data-toggle="dropdown" href="#">
+                Events
+            </a>
+            <ul class="dropdown-menu list-style:none">
+                <li><a asp-controller="Event" asp-action="Create">Create Event</a></li>
+                <li><a asp-controller="Event" asp-action="All">All Events</a></li>
+            </ul>
+        </li>
     }
     if (user.IsInRole("Student"))
     {
@@ -35,6 +53,14 @@
             </a>
             <ul class="dropdown-menu list-style:none">
                 <li><a asp-controller="Absence" asp-action="All">All Absences</a></li>
+            </ul>
+        </li>
+        <li class="nav-item dropdown" style="list-style:none">
+            <a class="dropdown-toggle font-weight-bold nav-link" data-toggle="dropdown" href="#">
+                Events
+            </a>
+            <ul class="dropdown-menu list-style:none">
+                <li><a asp-controller="Event" asp-action="All">All Events</a></li>
             </ul>
         </li>
     }
