Added Fee Service and Create Fees Functionality

--- a/EduMan/Views/Event/All.cshtml
+++ b/EduMan/Views/Event/All.cshtml
@@ -3,7 +3,7 @@
     
 }
 
-<h1 class="text-center">All Orders</h1>
+<h1 class="text-center">All Events</h1>
 <hr class="eventures-bg-color hr-2 w-75" />
 <table class="table w-75 mx-auto table-hover border-top-0">
     <thead>
