--- a/EduMan/Views/Fees/Create.cshtml
+++ b/EduMan/Views/Fees/Create.cshtml
@@ -1,10 +1,10 @@
-﻿@model Eduman.Models.BindingModels.CreateEventBindingModel
+﻿@model Eduman.Models.BindingModels.CreateFeeBindingModel
 @{
 }
 
-<h1 class="text-center">Create Event</h1>
+<h1 class="text-center">Create Fee</h1>
 <hr class="half-width eduman-bg-color hr-2" />
-<form class="mx-auto half-width" method="post" asp-controller="Event" asp-action="Create">
+<form class="mx-auto half-width" method="post" asp-controller="Fees" asp-action="Create">
     <div class="row mx-auto">
         <div class="form-group text-center font-weight-bold col-6 ">
             <label asp-for="StudentFirstName">Student's First Name</label>
@@ -18,12 +18,12 @@
     <hr class="eduman-bg-color hr-2" />
     <div class="row mx-auto">
         <div class="form-group col-6 font-weight-bold text-center">
-            <label asp-for="Type">Type</label>
-            <input type="text" asp-for="Type" class="form-control" placeholder="Type">
+            <label asp-for="Cost">Cost</label>
+            <input type="number" asp-for="Cost" class="form-control" placeholder="Cost">
         </div>
         <div class="form-group col-6  font-weight-bold text-center">
-            <label asp-for="EventDate">Date and Time of the Event</label>
-            <input type="datetime" asp-for="EventDate" class="form-control" placeholder="Time and Date of the Event">
+            <label asp-for="DueDate">Due Date of the Fee</label>
+            <input type="datetime" asp-for="DueDate" class="form-control" placeholder="Due Date of the Fee">
         </div>
     </div>
     <hr class="eduman-bg-color hr-2" />
