--- a/EduMan/Views/Shared/_NavbarPartial.cshtml
+++ b/EduMan/Views/Shared/_NavbarPartial.cshtml
@@ -33,6 +33,15 @@
                 <li><a asp-controller="Fees" asp-action="All">All Fees</a></li>
             </ul>
         </li>
+        <li class="nav-item dropdown" style="list-style:none">
+            <a class="dropdown-toggle font-weight-bold nav-link" data-toggle="dropdown" href="#">
+                Grades
+            </a>
+            <ul class="dropdown-menu list-style:none">
+                <li><a asp-controller="Grades" asp-action="Create">Create Grade</a></li>
+                <li><a asp-controller="Grades" asp-action="All">All Grades</a></li>
+            </ul>
+        </li>
     }
     if (user.IsInRole("Principal"))
     {
@@ -62,6 +71,14 @@
                 <li><a asp-controller="Fees" asp-action="All">All Fees</a></li>
             </ul>
         </li>
+        <li class="nav-item dropdown" style="list-style:none">
+            <a class="dropdown-toggle font-weight-bold nav-link" data-toggle="dropdown" href="#">
+                Grades
+            </a>
+            <ul class="dropdown-menu list-style:none">
+                <li><a asp-controller="Grades" asp-action="All">All Grades</a></li>
+            </ul>
+        </li>
     }
     if (user.IsInRole("Student"))
     {
@@ -87,6 +104,14 @@
             </a>
             <ul class="dropdown-menu list-style:none">
                 <li><a asp-controller="Fees" asp-action="All">All Fees</a></li>
+            </ul>
+        </li>
+        <li class="nav-item dropdown" style="list-style:none">
+            <a class="dropdown-toggle font-weight-bold nav-link" data-toggle="dropdown" href="#">
+                Grades
+            </a>
+            <ul class="dropdown-menu list-style:none">
+                <li><a asp-controller="Grades" asp-action="All">All Grades</a></li>
             </ul>
         </li>
     }
