Added Reflection Functionality and Views

--- a/EduMan/Views/Grades/All.cshtml
+++ b/EduMan/Views/Grades/All.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Eduman.Utilities
 @model IEnumerable<Eduman.Models.ViewModels.AllGradesViewModel>
 
-<h1 class="text-center">All Fees</h1>
+<h1 class="text-center">All Grades</h1>
 <hr class="eventures-bg-color hr-2 w-75" />
 <table class="table w-75 mx-auto table-hover border-top-0">
     <thead>
