--- a/EduMan/wwwroot/css/style.css
+++ b/EduMan/wwwroot/css/style.css
@@ -58,3 +58,8 @@ footer {
 .borderless td, .borderless th {
     border: none !important;
 }
+
+.btn-primary:active, .btn-primary.active {
+    background: #7395AE;
+    box-shadow: none;
+}
