--- a/EduMan/Views/Shared/_NavbarPartial.cshtml
+++ b/EduMan/Views/Shared/_NavbarPartial.cshtml
@@ -127,6 +127,12 @@
         </li>
     }
     <ul class="navbar-nav ml-auto" style="list-style:none">
+        @if (user.IsInRole("Principal"))
+        {
+            <li class="nav-item">
+                <a class="nav-link font-weight-bold" asp-controller="Account" asp-action="ConfirmUser">Confirm Users</a>
+            </li>
+        }
         <li class="nav-item">
             <a class="nav-link font-weight-bold" asp-controller="Account" asp-action="Logout">Logout</a>
         </li>
