--- a/EduMan/Views/Account/Login.cshtml
+++ b/EduMan/Views/Account/Login.cshtml
@@ -9,10 +9,12 @@
     <div class="form-group text-center font-weight-bold">
         <label asp-for="Username">Username</label>
         <input type="text" asp-for="Username" class="form-control" placeholder="Username">
+        <span asp-validation-for="Username" class="text-danger"></span>
     </div>
     <div class="form-group text-center font-weight-bold">
         <label asp-for="Password">Password</label>
         <input type="password" asp-for="Password" class="form-control" placeholder="Password">
+        <span asp-validation-for="Password" class="text-danger"></span>
     </div>
     <div class="button-holder d-flex justify-content-center">
         <button type="submit" class="btn eduman-bg-color">Login</button>
@@ -21,3 +23,7 @@
         <h10><a class="nav-link-white text-primary text-center" asp-controller="Account" asp-action="Register">Register as a new user</a></h10>
     </div>
 </form>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
