--- a/EduMan/Views/Account/Register.cshtml
+++ b/EduMan/Views/Account/Register.cshtml
@@ -10,10 +10,12 @@
         <div class="form-group text-center font-weight-bold col-6 ">
             <label asp-for="FirstName">First Name</label>
             <input type="text" asp-for="FirstName" class="form-control" placeholder="First Name">
+            <span asp-validation-for="FirstName" class="text-danger"></span>
         </div>
         <div class="form-group text-center font-weight-bold col-6 ">
             <label asp-for="LastName">Last Name</label>
             <input type="text" asp-for="LastName" class="form-control" placeholder="Last Name">
+            <span asp-validation-for="LastName" class="text-danger"></span>
         </div>
     </div>
     <hr class="eduman-bg-color hr-2" />
@@ -21,20 +23,24 @@
         <div class="form-group col-6 font-weight-bold text-center">
             <label asp-for="Username">Username</label>
             <input type="text" asp-for="Username" class="form-control" placeholder="Username">
+            <span asp-validation-for="Username" class="text-danger"></span>
         </div>
         <div class="form-group col-6  font-weight-bold text-center">
             <label asp-for="Email">Email</label>
             <input type="email" asp-for="Email" class="form-control" placeholder="Email">
+            <span asp-validation-for="Email" class="text-danger"></span>
         </div>
     </div>
     <div class="row mx-auto">
         <div class="form-group col-6 font-weight-bold text-center">
             <label asp-for="Password">Password</label>
             <input type="password" asp-for="Password" class="form-control" placeholder="Password">
+            <span asp-validation-for="Password" class="text-danger"></span>
         </div>
         <div class="form-group col-6 font-weight-bold text-center">
             <label asp-for="ConfirmPassword">Confirm Password</label>
             <input type="password" asp-for="ConfirmPassword" class="form-control" placeholder="Confirm Password">
+            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
         </div>
     </div>
     <hr class="eduman-bg-color hr-2" />
@@ -42,10 +48,12 @@
         <div class="form-group col-3 font-weight-bold text-center">
             <label asp-for="Number">Number</label>
             <input type="number" asp-for="Number" class="form-control" placeholder="Number">
+            <span asp-validation-for="Number" class="text-danger"></span>
         </div>
         <div class="form-group col-9 font-weight-bold text-center">
             <label asp-for="School">School</label>
             <input type="text" asp-for="School" class="form-control" placeholder="School">
+            <span asp-validation-for="School" class="text-danger"></span>
         </div>
     </div>
     <hr class="eduman-bg-color hr-2" />
@@ -62,3 +70,7 @@
         <button type="submit" class="btn eduman-bg-color">Register</button>
     </div>
 </form>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
