--- a/EduMan/Views/Shared/_NavbarPartial.cshtml
+++ b/EduMan/Views/Shared/_NavbarPartial.cshtml
@@ -130,7 +130,7 @@
         @if (user.IsInRole("Principal"))
         {
             <li class="nav-item">
-                <a class="nav-link font-weight-bold" asp-controller="Account" asp-action="ConfirmUser">Confirm Users</a>
+                <a class="nav-link font-weight-bold" asp-area="Confirmation" asp-controller="Confirmation" asp-action="ConfirmUser">Confirm Users</a>
             </li>
         }
         <li class="nav-item">
