--- a/EduMan/Views/Shared/_NavbarPartial.cshtml
+++ b/EduMan/Views/Shared/_NavbarPartial.cshtml
@@ -60,7 +60,7 @@
                 Absences
             </a>
             <ul class="dropdown-menu list-style:none">
-                <li><a asp-controller="Absence" asp-action="All">All Absences</a></li>
+                <li><a asp-area="" asp-controller="Absence" asp-action="All">All Absences</a></li>
             </ul>
         </li>
         <li class="nav-item dropdown" style="list-style:none">
@@ -68,8 +68,8 @@
                 Events
             </a>
             <ul class="dropdown-menu list-style:none">
-                <li><a asp-controller="Event" asp-action="Create">Create Event</a></li>
-                <li><a asp-controller="Event" asp-action="All">All Events</a></li>
+                <li><a asp-area="" asp-controller="Event" asp-action="Create">Create Event</a></li>
+                <li><a asp-area="" asp-controller="Event" asp-action="All">All Events</a></li>
             </ul>
         </li>
         <li class="nav-item dropdown" style="list-style:none">
@@ -77,8 +77,8 @@
                 Fees
             </a>
             <ul class="dropdown-menu list-style:none">
-                <li><a asp-controller="Fees" asp-action="Create">Create Fee</a></li>
-                <li><a asp-controller="Fees" asp-action="All">All Fees</a></li>
+                <li><a asp-area="" asp-controller="Fees" asp-action="Create">Create Fee</a></li>
+                <li><a asp-area="" asp-controller="Fees" asp-action="All">All Fees</a></li>
             </ul>
         </li>
     }
@@ -134,7 +134,7 @@
             </li>
         }
         <li class="nav-item">
-            <a class="nav-link font-weight-bold" asp-controller="Account" asp-action="Logout">Logout</a>
+            <a class="nav-link font-weight-bold" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
         </li>
     </ul>
 }
